--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -52,6 +52,7 @@ dependencies:
   flutter_launcher_icons: ^0.13.1
   flutter_web_pagination: ^0.0.3
   pager: ^0.0.5
+  flutter_phone_direct_caller: ^2.1.1
   # whatsapp: ^0.0.1
 
 dev_dependencies:
